--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,9 +9,9 @@ log4j.appender.Console.layout.ConversionPattern=[%p][%t][%d{yyyy-MM-dd HH\:mm\:s
 #普通文件日志
 log4j.appender.File=org.apache.log4j.RollingFileAppender
 #在Tomcat服务器下运行时的日志文件目录设定
-#log4j.appender.File.File=${catalina.home}/logs/SSMTest.log
+log4j.appender.File.File=${catalina.home}/logs/SSMTest.log
 #在jetty服务器下运行时的日志文件的目录设定
-log4j.appender.File.File=./SSMTest.log
+#log4j.appender.File.File=./SSMTest.log
 log4j.appender.File.MaxFileSize=10MB
 
 #输出日志，如果换成DEBUG表示输出DEBUG以上级别日志
